[package]
name = "sniper_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web3 = "0.19.0"
dotenv = "0.15.0"
ethers = { version = "2.0.11", features = ["ws"] } 
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.23"
env_logger = "0.10.1"
log = "0.4"
anyhow = "1.0.76"
chrono = "0.4.31"
ethers-flashbots = "0.14.0"
csv = "1.3.0"

[build-dependencies]
ethers = "2.0.11"

